Updated About Page

--- a/src/components/SupportersSection.scss
+++ b/src/components/SupportersSection.scss
@@ -5,7 +5,8 @@
   .supporters-content {
     width: 100%;
     max-width: 1400px;
-    margin: 46px auto;
+    margin: 0 auto;
+    padding: 46px 0;
 
     h1 {
       text-transform: uppercase;
