--- a/src/pages/About.scss
+++ b/src/pages/About.scss
@@ -2,4 +2,153 @@
   width: 100%;
   height: auto;
   padding-top: 90px;
+
+  #header {
+    width: 100%;
+    min-height: 100vh;
+    padding: 0 30px;
+    background: #E8EBF0;
+
+    .header-content {
+      width: 100%;
+      max-width: 1400px;
+      margin: auto;
+      display: flex;
+      justify-content: space-between;
+      gap: 90px;
+      padding: 98px 0 82px;
+
+      @media (max-width: 900px) {
+        flex-direction: column;
+
+        .header-left,
+        .header-right {
+          width: 100%;
+          max-width: 100% !important;
+        }
+      }
+
+      .header-left,
+      .header-right {
+        width: 100%;
+        max-width: 630px;
+      }
+
+      .header-left {
+        .header-title {
+          display: flex;
+          height: 30px;
+          margin-bottom: 32px;
+          display: flex;
+          align-items: center;
+          gap: 24px;
+
+          .line {
+            width: 72px;
+            height: 4px;
+            background: #22495f;
+          }
+
+          h1 {
+            font-weight: 700;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            line-height: 27px;
+            font-size: 20px;
+            color: #22495f;
+            margin: 0;
+          }
+        }
+
+        h1 {
+          margin-top: 63px;
+          font-weight: 700;
+          font-size: 56px;
+          line-height: 67px;
+          color: #22495f;
+
+          @media (max-width: 420px) {
+            font-size: 34px;
+            line-height: 50px;
+          }
+        }
+      }
+
+      .header-right {
+        h1 {
+          font-weight: 700;
+          font-size: 30px;
+          line-height: 30px;
+          color: #22495f;
+          margin-bottom: 14px;
+        }
+
+        p {
+          font-weight: 400;
+          font-size: 16px;
+          line-height: 26px;
+          color: #374151;
+        }
+      }
+    }
+
+    .img-content {
+      width: 100%;
+      max-width: 1400px;
+      margin: auto;
+      height: 448px;
+      border-radius: 20px;
+
+      img {
+        width: 100%;
+        height: 100%;
+        border-radius: 20px;
+        object-fit: cover;
+      }
+    }
+
+    .missionandVision-content {
+      width: 100%;
+      max-width: 1400px;
+      margin: 0 auto;
+      padding: 94px 0;
+      display: flex;
+      gap: 90px;
+      justify-content: space-between;
+      
+      @media (max-width: 900px) {
+        flex-direction: column;
+      }
+
+      div {
+        width: 100%;
+        max-width: 630px;
+
+        h3 {
+          font-weight: 700;
+          font-size: 20px;
+          line-height: 27px;
+          letter-spacing: 2px;
+          color: #22495f;
+          margin-bottom: 8px;
+          text-transform: uppercase;
+        }
+
+        h1 {
+          color: #22495f;
+          font-weight: 700;
+          font-size: 28px;
+          line-height: 42px;
+          margin-bottom: 8px;
+        }
+
+        p {
+          color: #374151;
+          font-weight: 400;
+          line-height: 25.6px;
+          font-size: 16px;
+        }
+      }
+    }
+  }
 }
